[gd_scene load_steps=3 format=3]

[ext_resource type="Theme" path="res://themes/main_theme.tres" id="1"]
[ext_resource type="Script" path="res://scenes/TestScene.gd" id="2"]

[node name="TestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0196078, 0.0117647, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "TEST SCENE - MILESTONE 0 TASK 1+2"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="FontTest" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Font Test: Perfect DOS VGA 437 Win
ABCDEFGHIJKLMNOPQRSTUVWXYZ
abcdefghijklmnopqrstuvwxyz
0123456789 !@#$%^&*()"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonTest" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Button"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ThemeInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tema Corrente: DEFAULT
Colore Principale: #4EA162"
horizontal_alignment = 1

[node name="CRTInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CRT Shader: DISATTIVO
Tema CRT: NO"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Verifica che il font sia Perfect DOS VGA 437,
testo verde (#4EA162) e effetti CRT funzionanti"
horizontal_alignment = 1
